factor 9999 update, css fix  - checkbox visible on mobile

--- a/public/stylesheets/parts/_calc.scss
+++ b/public/stylesheets/parts/_calc.scss
@@ -230,8 +230,8 @@
     }
 
     #onePriceForAll {
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
     }
 
     .label-for-one-price {
@@ -262,10 +262,8 @@
 
         #onePriceForAll {
             @include mq(xsmall) {
-                transform: scale(1.5);
-                width: 0px;
-                height: 0px;
-                vertical-align: super;
+                width: 25px;
+                height: 25px;
             }
         }
     }
